# finserver

./: .gitignore  CMakeLists.txt  README.md  init.sh
src/headers/: FileManip.h  Parser.h  Server.h  finserver.h  loguru.hpp
src/source/: Parser.cpp  Server.cpp  main.cpp
